fix(client): wrap long anchor links

--- a/packages/client/src/styles/nomalize.scss
+++ b/packages/client/src/styles/nomalize.scss
@@ -20,6 +20,8 @@
 
     text-decoration: none;
 
+    word-break: break-word;
+
     cursor: pointer;
 
     &:hover {
